# ollama-mcpo-adapter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/ollama_mcpo_adapter/: __init__.py  adapter.py  config_parser.py  dispatcher.py  service.py  service_runner.py
test/: conftest.py  test_adapter.py  test_service.py
test/data/input/: filesystem_openapi.json  mcp_config.json
